Fix issue causing distortion of screenshot aspect ratio

--- a/_sass/switcher.scss
+++ b/_sass/switcher.scss
@@ -14,6 +14,8 @@
     left: 0;
     right: 0;
     bottom: 0;
+    width: 100%;
+    height: 100%;
   }
 }
 
